# MAS_AutoML

./: .gitignore  .pdm-python  README.md  pyproject.toml  sandbox_exec_1.py
AutogluonModels/ag-20251113_093336/: learner.pkl  metadata.json
AutogluonModels/ag-20251113_093740/: learner.pkl
AutogluonModels/ag-20251113_093740/models/: trainer.pkl
AutogluonModels/ag-20251113_093740/models/ExtraTreesEntr/: model.pkl
AutogluonModels/ag-20251113_093740/models/ExtraTreesGini/: model.pkl
AutogluonModels/ag-20251113_093740/models/LightGBM/: model.pkl
data/.metadata/: local_registry.json  openml_registry.json
data/amlb/demo_agent/: data.csv
data/datasets/.metadata/: openml_registry.json
data/mocks/: code_agent_recommendation.json  data_analyze.json  example.json  framework_registry.json  metadata_analyze.json
docs/: architecture.md
experiments/notebooks/: README.md  automl_pipe copy.ipynb  automl_pipe.ipynb  bench_merged.csv  bench_with_metrics.csv  datasets_example.ipynb  example.json  framework_example.json  lightautoml_openml_example.ipynb  merge_bench_data.ipynb  paper_research_example.ipynb  tabular_lama_performance_analysis.md
mlruns/0/: meta.yaml
mlruns/0/43a037a6f56a4ac7a3e60f7d6e85fe75/: meta.yaml
mlruns/0/4a39ae4b5c4842b2b638e4757f4b008f/: meta.yaml
mlruns/0/7b387710d8a44aa48d4442fd7f88b6f2/: meta.yaml
mlruns/0/7d611015dac54937b6341f9a306bf3ca/: meta.yaml
mlruns/0/88b58587bb8c4bbbb0a4ffb514baea91/: meta.yaml
mlruns/0/9ed06575c8a744cea3063f9eca1d4ba9/: meta.yaml
mlruns/0/b98bc0930dda44b197f1f619da73fc59/: meta.yaml
mlruns/0/c47e0ce685db4566a9a0e94628eefb9e/: meta.yaml
mlruns/0/f4f48288c44c438bbb8332d0639bea5a/: meta.yaml
mlruns/0/fe3e319a3f96451d9d3f1fe1a2d60763/: meta.yaml
scripts/: check_data_agent.py  check_gigachat.py  run_pipeline.py
src/automl/: __init__.py  constants.py  loggers.py  main.py
src/automl/feature_processing/: CustomMetrics.py  README.md  __init__.py  pipe.py  transformers.py  utils.py
src/automl/metrics/: functions.py
src/automl/model/: __init__.py  base.py  blender.py  constants.py  main.py
src/automl/old_metrics/: base.py  custom_metrics.py  metrics.py  metrics_utils.py  old_utils.py  stability_metrics.py  utils.py
src/automl/utils/: logger.py
src/automl_old/examples/: launch_automl.py
src/automl_old/notebooks/: Models.ipynb
src/mas_automl/: __init__.py  __main__.py
src/mas_automl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mas_automl/agents/: README.md  __init__.py  base.py  data_agent.py  executor.py  planner.py  researcher.py
src/mas_automl/automl/: .codespell_ignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
src/mas_automl/automl/examples/: README.md  config.yaml  launch_automl.ipynb
src/mas_automl/automl/notebooks/: Data+Model.ipynb  example.ipynb  feature_selection_example.ipynb
src/mas_automl/automl/src/automl/feature_processing/: selectors.py  transformers.py
src/mas_automl/automl/src/automl/metrics/: __init__.py
src/mas_automl/automl/src/automl/metrics/custom_metrics/: base.py  classification_metrics.py
src/mas_automl/automl/src/automl/model/: models_lists.py  type_hints.py
src/mas_automl/automl/src/automl/model/lama/: default_lama.py
src/mas_automl/automl/src/automl/model/lightgbm/: __init__.py  metrics.py
src/mas_automl/automl/src/automl/model/sklearn/: base.py  forests.py
src/mas_automl/automl/src/automl/model/utils/: context_managers.py  model_utils.py
src/mas_automl/automl/src/automl/model/xgboost/: __init__.py  xgboost.py
src/mas_automl/automl/src/automl/utils/: loggers.py  utils.py
src/mas_automl/automl/tests/feature_selection/: test_pearson_corr_feature_selector.py  test_qconstant_feature_selector.py  test_spearman_corr_feature_selector.py
src/mas_automl/automl/tests/metrics/: test_metrics.py
src/mas_automl/automl/tests/metrics/custom_metrics.py/: test_auc.py
src/mas_automl/automl/tests/models/: models_lists.py  test_models.py  utils.py
src/mas_automl/code_agent/: __main__.py  base_pipeline.py  codegen_test.ipynb  execnet_gateway.py  load_mocks.py  openai_wraper.py
src/mas_automl/config/: settings.py
src/mas_automl/datasets/: README.md  __init__.py  manager.py  models.py
src/mas_automl/integrations/: __init__.py  autogluon.py  autosklearn.py  fedot.py
src/mas_automl/pipelines/: __init__.py  registry.py
src/mas_automl/services/: __init__.py  artifacts.py  datasets.py  llm.py  orchestrator.py
tests/: execnet_test.py  ollama_test.py  openai_test.py  test_integrations_baseline.py  test_smoke.py
(+111 files in other folders)
