[project]
name = "MAS_AutoML"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "ITMO Bootcamp Team" },
    {name = "KSS", email = "KudriashovS@mail.ru"},
]
readme = "README.md"
requires-python = "==3.10.*"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.12.4",
    "typer>=0.9",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "aiofiles>=23.2",
    "rich>=13.7",
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "mlflow>=2.9",
    "langchain>=0.2",
    "openai>=1.2",
    "tiktoken>=0.5",
    "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
automl = [
  "autogluon.tabular>=1.0; python_version < '3.12'",
  "fedot>=0.7",
  "lightgbm>=4.1",
  "catboost>=1.2",
]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.21",
  "ruff>=0.1",
  "mypy>=1.6",
  "types-requests",
]

[tool.uv]
package = true

[tool.typer]
use_rich = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--maxfail=1 --disable-warnings"


[tool.pdm]
distribution = false
