[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "mas-automl"
version = "0.1.0"
description = "Прототип мультиагентной системы для оркестрации AutoML-фреймворков и мета-оптимизации пайплайнов."
authors = [
  { name = "ITMO Bootcamp Team" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Proprietary" }
dependencies = [
  "pydantic>=2.5",
  "typer>=0.9",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "lxml>=4.9",
  "aiofiles>=23.2",
  "rich>=13.7",
  "pandas>=2.1",
  "numpy>=1.26,<2.0",
  "scikit-learn>=1.3",
  "mlflow>=2.9",
  "langchain>=0.2",
  "langchain-core>=0.2",
  "langchain-community>=0.2",
  "langchain-openai>=0.1",
  "langgraph>=0.2",
  "openai>=1.2",
  "tiktoken>=0.5",
  "arxiv>=2.1",
  "pydantic-settings>=2.0",
  "openml>=0.15",
  "execnet",
  "pypdf>=3.0",
  "torch<2.3.0",
  "optuna>=4.6.0",
  "lightgbm>=4.6.0",
  "xgboost>=2.1.4",
  "lightautoml>=0.2.7",
  "numba>=0.62.1",
  "polars>=1.35.2",
  "feature-engine>=1.9.3",
  "transformers>=4.57.1",
  "nltk>=3.9.2",
  "gensim>=4.4.0",
]

[project.optional-dependencies]
automl = [
  "autogluon.tabular>=1.0; python_version < '3.12'",
  "fedot>=0.7",
  "lightgbm>=4.1",
  "catboost>=1.2",
]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.21",
  "ruff>=0.1",
  "mypy>=1.6",
  "types-requests",
  "ipykernel",
]

[tool.uv]
package = true

[tool.typer]
use_rich = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--maxfail=1 --disable-warnings"

[dependency-groups]
dev = [
    "clearml>=2.0.2",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "kaggle>=1.7.4.5",
    "pytest>=8.4.2",
    "pytest-testmon>=2.1.4",
    "pytest-xdist>=3.8.0",
]

